backend/api/k8s/base/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: feeder-api-v1
  labels:
    app: feeder
    stack: backend
    layer: api
spec:
  selector:
    app: feeder
    stack: backend
    layer: api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP # Internal Traffic Only
