backend/api/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feeder-api-service
  labels:
    app: feeder
    stack: backend
    layer: api
spec:
  selector:
    app: feeder
    stack: backend
    layer: api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
  type: LoadBalancer # Exposing the application as requested
