backend/api/k8s/base/gateway-shared.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-shared
  namespace: default
spec:
  # Instruct GKE to use an external Global Load Balancer
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  # Listener 1: Standard HTTP
  - name: http
    protocol: HTTP
    port: 80

  # Listener 2: Secure HTTPS
  # - name: https
  #   protocol: HTTPS
  #   port: 443
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - name: my-tls-secret # This is where we attach our SSL certificate (stored in k8s secret)
