backend/api/k8s/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-feeder-api
  namespace: default
spec:
  parentRefs:
  - name: gateway-shared # Attaches to the Gateway created above
  hostnames:
    - "api.javarush.dev"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /feeder/api/v1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: ""
    backendRefs:
    - name: feeder-api-v1
      port: 80 # The port feeder api service is listening on
